// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap: application should be mountable 1`] = `
<div class="s-bootstrap">
  <!---->
</div>
`;

exports[`Bootstrap: router should be configurable 1`] = `
<div class="s-bootstrap">
  <div class="home">Home component</div>
</div>
`;
